图片上传页面提示

--- a/main/templates/user/upload.html
+++ b/main/templates/user/upload.html
@@ -41,11 +41,13 @@
                 <div class="field">
                     <label>任务分类二</label>
                     <select class="ui fluid selection dropdown" id="task_name_second" name="task_name_second">
+                        <option value="0">请先选择“任务分类一”</option>
                     </select>
                 </div>
                 <div class="field">
                     <label>任务分类三</label>
                     <select class="ui fluid selection dropdown" id="task_name_third" name="task_name_third">
+                        <option value="0">请先选择“任务分类二”</option>
                     </select>
                 </div>
                 <div class="field">
