图片宏更新

--- a/main/templates/macros.html
+++ b/main/templates/macros.html
@@ -24,6 +24,16 @@
                 <div class="meta">
                     <a>{{ moment(photo.timestamp).format('YYYY MMMM Do ，h:mm:ss a') }}</a>
                 </div>
+                <ul class="ui list">
+                    <li>{{ photo.task.name_first }}</li>
+                    <li>{{ photo.task.name_second }}</li>
+                    <li>{{ photo.task.name_third }}</li>
+                </ul>
+                <div class="description">{{ photo.description|wordwrap(20, break_long_words=True) }}</div>
+                {# TODO：截断 #}
+            </div>
+            <div class="extra content" style="text-align: center;">
+                {{ user.depart.name }}
             </div>
         </div>
     {% else %}
