--- a/main/templates/ins/comments_list.html
+++ b/main/templates/ins/comments_list.html
@@ -4,7 +4,7 @@
 {% block title %}评论列表{% endblock %}
 
 {% block nav %}
-    <a class="active item"><i class="list icon"></i>评论列表</a>
+    <a class="active item"><i class="comments icon"></i>评论列表</a>
     <a class="item" href="{{ url_for('main.index') }}"><i class="arrow left icon"></i>返回首页</a>
 {% endblock %}
 
