--- a/main/templates/ins/photos_list.html
+++ b/main/templates/ins/photos_list.html
@@ -4,7 +4,7 @@
 {% block title %}图片列表{% endblock %}
 
 {% block nav %}
-    <a class="active item"><i class="list icon"></i>图片列表</a>
+    <a class="active item"><i class="calendar icon"></i>图片列表</a>
     <a class="item" href="{{ url_for('main.index') }}"><i class="arrow left icon"></i>返回首页</a>
 {% endblock %}
 
