--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -24,7 +24,7 @@
                 <div class="description">查看已有评论列表</div>
                 <div class="ui top right attached pink label">New</div>
             </div>
-            <a href="{{ url_for('ins.comments_list') }}" class="ui attached button"><i class="list icon"></i></a>
+            <a href="{{ url_for('ins.comments_list') }}" class="ui attached button"><i class="comments icon"></i></a>
         </div>
     </div>
 {% endblock %}
