用户页图片列表不显示操作

--- a/main/templates/macros.html
+++ b/main/templates/macros.html
@@ -35,7 +35,7 @@
             <div class="extra content" style="text-align: center;">
                 {{ photo.author.depart.name }}
             </div>
-            {% if current_user.can('SET_PUBLIC') %}
+            {% if ('photos_list' in request.referrer) and current_user.can('SET_PUBLIC') %}
                 <form style="text-align: center;" class="ui inline" method="post"
                       action="{{ url_for('ins.set_public', photo_id=photo.id) }}">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
@@ -55,6 +55,7 @@
                         {% endif %}
                     {% endif %}
                 </form>
+                {#  target="my_iframe" <iframe hidden name="my_iframe"></iframe> #}
             {% endif %}
             {# TODO：点击 icon 操作 #}
         </div>
