--- a/main/templates/ins/photos_list.html
+++ b/main/templates/ins/photos_list.html
@@ -147,7 +147,7 @@
     {#                    {% endif %}#}
     {#                </td>#}
     {#                <td>#}
-    {#                    <a href="{{ url_for('user.index', id=photo.author.id) }}"#}
+    {#                    <a href="{{ url_for('user.index', user_id=photo.author.id) }}"#}
     {#                       target='_blank'>{{ photo.author.name }}</a>#}
     {#                </td>#}
     {#                <td title="{{ photo.task.name_first }}；{{ photo.task.name_second }}；{{ photo.task.name_third }}">#}
