--- a/main/templates/user/index.html
+++ b/main/templates/user/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             {% if photos %}
-            {{ pagination_widget(pagination, 'user.index', id=id) }}
+                {{ pagination_widget(pagination, 'user.index', user_id=user_id) }}
             {% endif %}
         </div>
     </div>
