--- a/main/templates/user/index.html
+++ b/main/templates/user/index.html
@@ -74,10 +74,10 @@
                 <a href="{{ url_for('auth.register') }}" class="ui green button" target='_blank'>注册新用户</a>
             {% endif %}
             {% if current_user.can('SET_PUBLIC') %}
-                <a href="{{ url_for('ins.photos_list') }}" class="ui blue button" target='_blank'>设置公开权限</a>
+                <a href="{{ url_for('ins.photos_list_set_public') }}" class="ui blue button" target='_blank'>设置公开权限</a>
             {% endif %}
             {% if current_user.can('COMMENT') %}
-                <a href="{{ url_for('ins.comments_list') }}" class="ui brown button" target='_blank'>查看评论</a>
+                <a href="{{ url_for('ins.photos_list_comment') }}" class="ui brown button" target='_blank'>发表评论意见</a>
             {% endif %}
         </div>
     {% endif %}
