--- a/main/templates/ins/photos_list/set_public.html
+++ b/main/templates/ins/photos_list/set_public.html
@@ -46,9 +46,6 @@
     {{ message_part() }}
     <div class="ui blue message">
         当前筛选条件【
-        {% if depart_id != 0 %}
-            部门：{{ depart_id }}；
-        {% endif %}
         {% if task_name_first != '0' %}
             任务分类一：{{ task_name_first }}；
         {% endif %}
@@ -61,21 +58,7 @@
         】
     </div>
     <form action="" class="ui form" method="get">
-        <div class="four fields">
-            <div class="three wide field">
-                <label>部门</label>
-                <select class="ui selection dropdown" id="depart_id" name="depart_id">
-                    <option value="0">==请选择==</option>
-                    <option value="1">本科生第一支部</option>
-                    <option value="2">本科生第二支部</option>
-                    <option value="3">研究生第一支部</option>
-                    <option value="4">研究生第二支部</option>
-                    <option value="5">研究生第三支部</option>
-                    <option value="6">教工第一支部</option>
-                    <option value="7">教工第二支部</option>
-                    <option value="8">计算机系支部</option>
-                </select>
-            </div>
+        <div class="three fields">
             <div class="three wide field">
                 <label>任务分类一</label>
                 <select class="ui selection dropdown" id="task_name_first" name="task_name_first">
@@ -95,7 +78,7 @@
                     <option value="0">请先选择“任务分类一”</option>
                 </select>
             </div>
-            <div class="field">
+            <div class="three wide field">
                 <label>任务分类三</label>
                 <select class="ui selection dropdown" id="task_name_third" name="task_name_third">
                     <option value="0">请先选择“任务分类二”</option>
@@ -105,7 +88,7 @@
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <input class="ui positive button" type="submit" value="筛选">
         <input class="ui negative button" type="reset"
-               onclick=window.location.href=("{{ url_for('ins.photos_list') }}"); value="清空">
+               onclick=window.location.href=("{{ url_for('ins.photos_list_set_public') }}"); value="清空">
     </form>
     {#    <table id="photos_list_table" class="tablesorter ui sortable unstackable celled striped red compact table">#}
     {#        <thead>#}
@@ -177,29 +160,6 @@
     </div>
     {% if photos %}
         {{ pagination_widget(pagination, 'ins.photos_list', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
-    {% endif %}
-    {% if depart_id != 0 %}
-        <div class="ui tall stacked segment">
-            <h3 class="ui dividing header">评论</h3>
-            <form action="{{ url_for('ins.comment') }}" method="post" class="ui reply form">
-                <div class="field">
-                    <label>评论区</label>
-                    <div class="ui input">
-                        <textarea class="ui input" type="text" rows="5" name="body" placeholder="请输入评论……"
-                                  autofocus></textarea>
-                    </div>
-                </div>
-                <input type="hidden" name="depart_id" value="{{ depart_id }}"/>
-                <input type="hidden" name="passed_count" value="{{ passed_count }}">
-                <input type="hidden" name="url" value="{{ request.url }}">
-                <input type="hidden" name="filter" value="{% if depart_id != 0 %}部门：{{ depart_id }}；{% endif %}
-        {% if task_name_first != '0' %}任务分类一：{{ task_name_first }}；{% endif %}
-        {% if task_name_second != '0' %}任务分类二：{{ task_name_second }}；{% endif %}
-        {% if task_name_third != '0' %}任务分类三：{{ task_name_third }}{% endif %}"/>
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                <input class="ui positive button" type="submit" value="提交">
-            </form>
-        </div>
     {% endif %}
 {% endblock %}
 
