--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -19,14 +19,14 @@
             <a href="{{ url_for('ins.photos_list_set_public') }}" class="ui attached button"><i
                     class="calendar check icon"></i></a>
         </div>
-            <div class="pink card">
+        <div class="pink card">
             <div class="content">
                 <div class="header">发表评论</div>
                 <div class="description">发表评论意见</div>
-                <div class="ui top right attached pink label">New</div>
+                <div class="ui top right attached brown label">New</div>
             </div>
-                <a href="{{ url_for('ins.photos_list_comment') }}" class="ui attached button"><i
-                        class="comments icon"></i></a>
+            <a href="{{ url_for('ins.photos_list_comment') }}" class="ui attached button"><i
+                    class="comments icon"></i></a>
         </div>
     </div>
 {% endblock %}
