--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -19,7 +19,7 @@
             <a href="{{ url_for('ins.photos_list_set_public') }}" class="ui attached button"><i
                     class="calendar check icon"></i></a>
         </div>
-        <div class="pink card">
+        <div class="brown card">
             <div class="content">
                 <div class="header">发表评论</div>
                 <div class="description">发表评论意见</div>
