首页：查看评论

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -23,9 +23,17 @@
             <div class="content">
                 <div class="header">发表评论</div>
                 <div class="description">发表评论意见</div>
-                <div class="ui top right attached brown label">New</div>
             </div>
             <a href="{{ url_for('ins.photos_list_comment') }}" class="ui attached button"><i
+                    class="comments icon"></i></a>
+        </div>
+        <div class="purple card">
+            <div class="content">
+                <div class="header">查看评论</div>
+                <div class="description">查看评论意见</div>
+                <div class="ui top right attached pink label">New</div>
+            </div>
+            <a href="{{ url_for('ins.comments_list') }}" class="ui attached button"><i
                     class="comments icon"></i></a>
         </div>
     </div>
