--- a/main/templates/ins/photos_list/advive.html
+++ b/main/templates/ins/photos_list/advive.html
@@ -79,7 +79,7 @@
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <input class="ui positive button" type="submit" value="筛选">
         <input class="ui negative button" type="reset"
-               onclick=window.location.href=("{{ url_for('ins.photos_list_comment') }}"); value="清空">
+               onclick=window.location.href=("{{ url_for('ins.photos_list_advice') }}"); value="清空">
     </form>
     {#    <table id="photos_list_table" class="tablesorter ui sortable unstackable celled striped red compact table">#}
     {#        <thead>#}
