--- a/main/templates/user/index.html
+++ b/main/templates/user/index.html
@@ -76,8 +76,10 @@
             {% if current_user.can('SET_PUBLIC') %}
                 <a href="{{ url_for('ins.photos_list_set_public') }}" class="ui blue button" target='_blank'>设置公开权限</a>
             {% endif %}
-            {% if current_user.can('COMMENT') %}
+            {% if current_user.can('ADVICE') %}
                 <a href="{{ url_for('ins.photos_list_advice') }}" class="ui brown button" target='_blank'>发表评论意见</a>
+            {% endif %}
+            {% if current_user.can('COMMENT') %}
                 <a href="{{ url_for('ins.advive_list') }}" class="ui purple button" target='_blank'>查看评论意见</a>
             {% endif %}
         </div>
