评论接口改动

--- a/main/templates/ins/advive_list.html
+++ b/main/templates/ins/advive_list.html
@@ -38,7 +38,7 @@
                     {{ advive.id }}
                 </td>
                 <td>
-                    <a href="{{ advive.url }}">{{ advive.filter }}</a>
+                    <a href="{{ advive.url }}" target="_blank">{{ advive.filter }}</a>
                 </td>
                 <td>
                     {{ advive.passed_count }}
@@ -67,11 +67,14 @@
                 </td>
                 <td>
                     {% if advive.status == 0 %}
-                        <a class="ui green mini button" href="{{ url_for('ins.show_advive', advive_id=advive.id) }}">首次回复</a>
+                        <a class="ui green mini button" href="{{ url_for('ins.show_advive', advive_id=advive.id) }}"
+                           target="_blank">首次回复</a>
                     {% elif advive.status == 1 %}
-                        <a class="ui blue mini button" href="{{ url_for('ins.show_advive', advive_id=advive.id) }}">等待新回复</a>
+                        <a class="ui blue mini button" href="{{ url_for('ins.show_advive', advive_id=advive.id) }}"
+                           target="_blank">等待新回复</a>
                     {% elif advive.status == 2 %}
-                        <a class="ui brown mini button" href="{{ url_for('ins.show_advive', advive_id=advive.id) }}">继续回复</a>
+                        <a class="ui brown mini button" href="{{ url_for('ins.show_advive', advive_id=advive.id) }}"
+                           target="_blank">继续回复</a>
                     {% else %}
                         <a class="ui black mini button"
                            href="{{ url_for('ins.show_advive', advive_id=advive.id) }}">已完成</a>
